sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value a
  for (i<- a to (getNombreValeurs()-2)) {
           ^